# ChangeLog for dev-python/cachecontrol
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cachecontrol-0.10.2 (02 Aug 2014)

  02 Aug 2014; Johann Schmitz <ercpe@gentoo.org> +cachecontrol-0.10.2.ebuild,
  +metadata.xml:
  New ebuild for cachecontrol